# AutoZWJ

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  LICENSE  README.md
docs/adr/: 0001-refactor-cage-and-demolition.md
docs/en/: README.md  index.md
docs/ja/: README.md  index.md
docs/zh/: build.md  features.md  index.md  usage.md
src/: plugin.cpp  plugin.h
src/chain/: template_chain.cpp  template_chain.h
src/codec/: codec.cpp  codec.h
src/effect/: effect_dict.cpp  effect_dict.h
src/exo/: object_generator.cpp  object_generator.h
src/generation/: generation.cpp  generation.h
src/i18n/: i18n.cpp  i18n.h  i18n_embedded.h.in
src/i18n/lang/: en.ini  ja.ini  zh-CN.ini
src/i18n/参考的官方译本/: English.aul2  简体中文.aul2
src/lrc/: lrc_parser.cpp  lrc_parser.h
src/midi/: midi_parser.cpp
src/parsers/: tempo_convert.h
src/parsers/lrc/: lrc_parser.cpp
src/parsers/midi/: midi_parser.cpp  midi_parser.h
src/parsers/rpp/: rpp_parser.cpp  rpp_parser.h
src/rpp/: rpp_parser.cpp
src/script/: expr_evaluator.h  variable_subst.h
src/tools/tempo/: tempo_apply.cpp  tempo_apply.h
src/ui/: effect_chain_editor.cpp  effect_chain_editor.h  file_picker.cpp  file_picker.h  imgui_window.cpp  imgui_window.h  project_state.cpp  ui_components.cpp  ui_components.h  ui_config.h
